[package]
name = "revmc-llvm"
description = "EVM bytecode compiler LLVM backend"
homepage = "https://github.com/danipopes/revmc/tree/main/crates/revmc-llvm"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
revmc-backend.workspace = true

inkwell = { git = "https://github.com/TheDan64/inkwell", rev = "4f4d09a57b26e581a532aec9457b332bfe6469dc", features = ["llvm22-1"] }
alloy-primitives = { workspace = true, features = ["std", "map-fxhash"] }
object = { version = "0.39", default-features = false, features = ["read_core", "elf"] }
tracing.workspace = true

[build-dependencies]
cc = "1"

[features]
prefer-static = ["inkwell/llvm22-1-prefer-static"]
prefer-dynamic = ["inkwell/llvm22-1-prefer-dynamic"]
