[package]
name = "revmc-statetest"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
revmc = { workspace = true, features = ["llvm"] }

revm = { workspace = true, features = ["std", "test-types", "tracer"] }

alloy-rlp = { version = "0.3", features = ["arrayvec", "derive"] }
alloy-trie = { version = "0.9", features = ["ethereum"] }
dashmap = "6"
eyre.workspace = true
indicatif = "0.18"
k256 = { version = "0.13", features = ["ecdsa"] }
libloading = "0.9"
serde_json = { version = "1.0", features = ["preserve_order"] }
tempfile = "3"
thiserror = "2"
thread_local = "1"
tracing-subscriber.workspace = true
tracing.workspace = true
walkdir = "2.5"

[lib]
path = "src/lib.rs"
