[package]
name = "revmc-worker"
description = "Evm Compiler worker that compiles in node runtime"


version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
no-default-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["std"] }

revm.workspace = true
revmc.workspace = true

revm-interpreter = { workspace = true, features = ["parse"] }
revm-primitives.workspace = true

revmc-backend.workspace = true
revmc-llvm.workspace = true
revmc-builtins = { workspace = true, features = ["ir"] }
revmc-cranelift = { workspace = true, optional = true }

color-eyre.workspace = true
once_cell = "1.20.2"
tokio = { version = "1.41.1", features = ["full"] }
sled = "0.34.7"
thiserror = "1.0.34"
tracing.workspace = true
libloading = "0.8"
lru = "0.12.5"

