[package]
name = "revmc"
description = "EVM bytecode compiler"
homepage = "https://github.com/danipopes/revmc/tree/main/crates/revmc"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
no-default-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
revmc-backend.workspace = true
revmc-builtins = { workspace = true, features = ["ir"] }
revmc-context.workspace = true
revmc-llvm = { workspace = true, optional = true }

alloy-primitives = { workspace = true, features = ["std", "map-fxhash"] }
alloy-evm = { workspace = true, optional = true }

revm-bytecode.workspace = true
revm-context-interface.workspace = true
revm-context.workspace = true
revm-database-interface.workspace = true
revm-database.workspace = true
revm-handler.workspace = true
revm-inspector.workspace = true
revm-interpreter.workspace = true
revm-primitives.workspace = true
revm-state.workspace = true

bitflags = "2.5"
crossbeam-channel.workspace = true
crossbeam-queue.workspace = true
dashmap = "6"
derive_more = { version = "2", default-features = false, features = ["debug"] }
bitvec = "1.0"
either = "1.13"
libloading = "0.9"
tempfile = "3.10"
quanta.workspace = true
tracing.workspace = true

arbitrary = { version = "1.3", optional = true }
paste = { workspace = true, optional = true }
similar-asserts = { version = "2.0", optional = true }
tracing-subscriber = { workspace = true, features = ["fmt"], optional = true }
smallvec = "1.15.1"
oxc_index = { version = "4.1.0", features = ["nonmax"] }
indexmap = "2.13.0"

[build-dependencies]
revmc-build.workspace = true

[dev-dependencies]
revmc-context.workspace = true
revmc-statetest = { path = "../revmc-statetest" }

alloy-evm.workspace = true
paste.workspace = true
similar-asserts = "2.0"
snapbox = "1.1"
tracing-subscriber = { workspace = true, features = ["fmt"] }

[features]
default = ["llvm"]
llvm = ["dep:revmc-llvm"]
llvm-prefer-static = ["llvm", "revmc-llvm?/prefer-static"]
llvm-prefer-dynamic = ["llvm", "revmc-llvm?/prefer-dynamic"]

alloy-evm = ["dep:alloy-evm"]

asm-keccak = ["alloy-primitives/asm-keccak"]

# Internal features.
__fuzzing = ["dep:arbitrary", "dep:paste", "dep:similar-asserts", "dep:tracing-subscriber"]
