[package]
name = "revmc"
description = "EVM bytecode compiler"
homepage = "https://github.com/danipopes/revmc/tree/main/crates/revmc"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
no-default-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
revmc-backend.workspace = true
revmc-builtins = { workspace = true, features = ["ir"] }
revmc-codegen.workspace = true
revmc-context = { workspace = true, features = ["evm"] }
revmc-llvm = { workspace = true, optional = true }
revmc-runtime.workspace = true

revm-bytecode.workspace = true
revm-context-interface.workspace = true
revm-handler.workspace = true
revm-inspector.workspace = true
revm-interpreter.workspace = true
revm-primitives.workspace = true

[dev-dependencies]
revmc-statetest = { path = "../revmc-statetest" }

[features]
default = ["llvm"]
llvm = ["dep:revmc-llvm", "revmc-codegen/llvm", "revmc-runtime/llvm"]
llvm-prefer-static = ["llvm", "revmc-codegen/llvm-prefer-static", "revmc-runtime/llvm-prefer-static"]
llvm-prefer-dynamic = ["llvm", "revmc-codegen/llvm-prefer-dynamic", "revmc-runtime/llvm-prefer-dynamic"]
alloy-evm = ["revmc-runtime/alloy-evm"]
asm-keccak = ["revmc-codegen/asm-keccak", "revmc-runtime/asm-keccak"]
__fuzzing = ["revmc-codegen/__fuzzing"]
