[package]
name = "revmc-examples-compiler"
publish = false

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
exclude.workspace = true

[build-dependencies]
revmc-build.workspace = true

[dependencies]
revmc = { workspace = true, features = ["llvm-prefer-dynamic"] }

clap = { workspace = true, features = ["derive"] }
eyre.workspace = true
